resources/details_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: details
  labels:
    app: details
spec:
  containers:
    - name: details
      image: docker.io/istio/examples-bookinfo-details-v1:1.16.4
      ports:
        - containerPort: 9080
