resources/products_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    app: products
spec:
  replicas: 3
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      name: products
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: amitsadafule/product-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
