resources/customers_clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  selector:
    app: customers
  ports:
    - port: 8080
  type: ClusterIP
