resources/customers_loadbalancer_dynamicport.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  selector:
    app: customers
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
