resources/customers_nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  selector:
    app: customers
  ports:
    - port: 80
      nodePort: 30001
      targetPort: 8080
  type: NodePort
