resources/products_clusterip_WellknownPort.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
