resources/products_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: products
  namespace: default
spec:
  rules:
    - host: "*.us-east-2.elb.amazonaws.com"
      http:
        paths:
          - backend:
              serviceName: products
              servicePort: 80
            path: /products
